--- a/index.html
+++ b/index.html
@@ -15,19 +15,29 @@
 
 <body>
 
+    <!-- <div class="card" style="width: 18rem;">
+        <div class="card-body">
+            <h5 class="card-title">Are You Ready </h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div> -->
     <div class="row">
         <div class="left-section text-center">
             <h3 class="text-center mt-5 mb-5">Question Navigator</h3>
         </div>
         <div class="main-section mt-5">
             <div class="card">
-                <h5 class="card-header">
-                    
-                </h5>
+                <h5 class="card-header fs-3"></h5>
                 <div class="card-body">
-                    <h5 class="card-title"></h5>
-                    <p class="card-text"></p>
-                    <a href="#" class="btn btn-primary">Next</a>
+                    <p class="card-text">
+                    <ul class="list-unstyled fs-4">
+
+                    </ul>
+                    </p>
+                </div>
+                <div class="card-footer ">
+                    <button class="btn btn-outline-success">Next</button>
                 </div>
             </div>
         </div>
