--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 
 <body>
 
-    <!-- <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">Are You Ready </h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="quiz-container">
+        <div class="quiz-card">
+            <h1>Are you ready?</h1>
+            <p>Test your knowledge and start the quiz now..</p>
+            <button class="start-btn">Start Quiz</button>
         </div>
-    </div> -->
-    <div class="row">
+    </div>
+
+    <div class="quiz-wrepper row">
         <div class="left-section text-center">
             <h3 class="text-center mt-5 mb-5">Question Navigator</h3>
         </div>
