--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <h5 class="card-header fs-3"></h5>
                 <div class="card-body">
                     <p class="card-text">
-                   <ul class="list-unstyled fs-4 options"></ul>
+                    <ul class="list-unstyled fs-4 options"></ul>
                     </p>
                 </div>
                 <div class="card-footer ">
@@ -41,11 +41,19 @@
                 </div>
             </div>
         </div>
+
         <div class="right-section timer-box text-center text-light">
             <h5 class="mt-5 fs-2 fw-bolder">Time Left</h5>
             <h3 id="timer" class="fs-2 fw-bolder"></h3>
+            <button class="btn btn-outline-success w-75 mt-4 text-light rounded-3 submit">Submit</button>
         </div>
     </div>
+    <div class="result d-none">
+        <div class="card vh-100 w-100">
+
+        </div>
+    </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
